--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -88,10 +88,14 @@ body * {
 }
 
 .light #switch button{
-  right: 0;
-  left: initial;
-}
-#switch button {
+  animation: slide-in 0.4s forwards;
+  }
+
+  #switch button:hover{
+  outline: 8px solid var(--highlight-color);
+     
+  }
+  #switch button {
   width: 32px;
   height: 32px;
   background: white var(--switch-bg-url) no-repeat center;
@@ -102,6 +106,7 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+  animation: slide-back 0.4s forwards;
 }
 #switch span {
   display: block;
@@ -181,4 +186,22 @@ ul li a:hover {
     --bg-url: url(/bg-light.png);
   }
   
+}
+/* animation */
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
+  }
 }
